--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -1,4 +1,10 @@
 # .github/actions/approve_and_merge/action.yml
+env:
+  COMMIT_MESSAGE: |
+    Update jacoco badge
+
+    Created by GitHub Action [${{ github.workflow }} #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+    
 name: 'Approve and Merge PR'
 description: 'Approves and merges a pull request'
 inputs:
