--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -81,7 +81,7 @@ jobs:
         uses: ./.github/actions/create_approve_and_merge
         with:
           app-id: ${{ secrets.ALTERNATE_APP_ID }}
-          private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
+          app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: |
             */jacoco.svg
