--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -1,10 +1,7 @@
-name: my test workflow updated
+name: my test workflow
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   testing:
