--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -30,6 +30,7 @@ runs:
     - name: Save Workflow Status to JSON
       run: >
         echo '{"token": "${{ steps.my-app.outputs.token }}"}' >> token.json
+        git add .
       shell: bash
   
     - name: Create PR
