--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -86,6 +86,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: |
             */jacoco.svg
+            */token.json
           
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
