--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -46,6 +46,45 @@ jobs:
           echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
           echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
+      - name: Set up Git
+        run: |
+          git config --global user.name "${{ secrets.GITHUB_ACTOR }}"
+          git config --global user.email "${{ secrets.GITHUB_ACTOR }}@users.noreply.github.com"
+
+      - name: Determine if there are changes
+        id: check_changes
+        run: |
+          changes=$(git diff --name-only)
+          if [ -z "$changes" ]; then
+            echo "No changes to commit. Exiting..."
+            exit 0
+          fi
+          echo "Changes detected. Continuing with the workflow."
+
+      - name: Create branch
+        run: |
+          git checkout -b feature-branch
+
+      # Add your build/test steps here
+
+      - name: Commit and push changes
+        run: |
+          git add .
+          git commit -m "Auto-generated changes"
+          git push origin feature-branch
+
+      - name: Create Pull Request
+        id: create_pr
+        if: steps.check_changes.outcome == 'success'
+        run: |
+          pr_number=$(curl -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/pulls \
+            -d '{"title":"Auto-generated Pull Request","head":"feature-branch","base":"main","body":"This PR is automatically generated."}' | jq -r '.number')
+
+          echo "PR number: $pr_number"
+          echo "::set-output name=pr_number::$pr_number"
+
 
       # - name: my-app-install token
       #   id: my-app
@@ -77,15 +116,15 @@ jobs:
       #   run: | 
       #     echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
 
-      - name: Create, Approve and Merge PR
-        uses: ./.github/actions/create_approve_and_merge
-        with:
-          title: 'custom title'
-          app-id: ${{ secrets.ALTERNATE_APP_ID }}
-          app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          add-paths: |
-            */token.json
+      # - name: Create, Approve and Merge PR
+      #   uses: ./.github/actions/create_approve_and_merge
+      #   with:
+      #     title: 'custom title'
+      #     app-id: ${{ secrets.ALTERNATE_APP_ID }}
+      #     app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     add-paths: |
+      #       */token.json
           
       # - name: Approve PR
       #   if: steps.create-pr.outputs.pull-request-number
