--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -48,8 +48,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name "${{ secrets.GITHUB_ACTOR }}"
-          git config --global user.email "${{ secrets.GITHUB_ACTOR }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "<${{ github.actor }}@linkedin.com>"
 
       - name: Determine if there are changes
         id: check_changes
