--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -96,9 +96,9 @@ runs:
       if: env.check_changes == 'true'
       run: |
         pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.github-token }}" \
-        -H "Accept: application/vnd.github.v3+json" \
-        https://api.github.com/repos/${{ github.repository }}/pulls \
-        -d '{"title":${{ inputs.title }},"head":"feature-branch","base":"main","body":"This PR is automatically generated."}' | jq -r '.number')
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/${{ github.repository }}/pulls \
+          -d '{"title":"Auto-generated Pull Request","head":"feature-branch","base":"main","body":"This PR is automatically generated."}' | jq -r '.number')
 
         echo "PR number: $pr_number"
         echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
