--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -151,7 +151,7 @@ jobs:
           app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: |
-            */jacoco.svg
+            */README.md
           
       # - name: Approve PR
       #   if: ${{ env.PR_NUMBER }}
