--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Get Old Percentage
         id: get_old_percentage
         run: |
-          old_percentage=$(sed -nE 's/.*coverage-([0-9]+)%25.*/\1/p' README.md)
+          old_percentage=$(sed -nE 's/.*coverage-([0-9]+)\%25.*/\1/p' README.md)
           echo "old: $old_percentage"
           echo "OLD=$old_percentage" >> $GITHUB_ENV
 
@@ -49,7 +49,7 @@ jobs:
           # Compare old and new percentages
           old_percentage="${{ env.OLD }}"
           if [ "$old_percentage" != "$new_percentage" ]; then
-            sed -i "s/coverage-$old_percentage%25;coverage-$new_percentage%25/" README.md
+            sed -i "s/coverage-$old_percentage\%25/coverage-$new_percentage\%25/" README.md
             echo "updated the percentage: $new_percentage"
 
             # Update the color based on the percentage
