--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -101,7 +101,7 @@ runs:
         pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.github-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls \
-          -d '{"title":"Auto-generated Pull Request","head":"feature-branch","base":"main","body":${{ inputs.commit-message }}}' | jq -r '.number')
+          -d '{"title":"Auto-generated Pull Request","head":"feature-branch","base":"main","body":"body test"}' | jq -r '.number')
 
         echo "PR number: $pr_number"
         echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
