--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -101,7 +101,7 @@ runs:
         pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.github-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls \
-          -d '{"title":${{ inputs.title }},"head":"feature-branch","base":"main","body":${{ env.COMMIT_MESSAGE }}}' | jq -r '.number')
+          -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ env.COMMIT_MESSAGE }}"}' | jq -r '.number')
 
         echo "PR number: $pr_number"
         echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
