--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -149,7 +149,7 @@ jobs:
         uses: ./.github/actions/create_approve_and_merge
         with:
           title: 'custom title'
-          commit-message: 'test'
+          commit-message: 'test commit message'
           app-id: ${{ secrets.ALTERNATE_APP_ID }}
           app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
