--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Update Badge
         run: |
           # Replace the coverage percentage
-          new_percentage=21.56  # Replace with your desired percentage
+          new_percentage=99.56  # Replace with your desired percentage
 
           # Compare old and new percentages
           old_percentage="${{ env.OLD }}"
@@ -54,11 +54,11 @@ jobs:
 
             # Update the color based on the percentage
             if (( $(echo "$new_percentage < 33.00" | bc -l) )); then
-              sed -i "s/%25-green.svg/%25-red.svg/" README.md
+              sed -i "s/%25-[^.]*.svg/%25-red.svg/" README.md
               echo "updated to red"
             else
               echo "updated to green"
-              sed -i "s/%25-*.svg/%25-green.svg/" README.md
+              sed -i "s/%25-[^.]*.svg/%25-green.svg/" README.md
             fi
             cat README.md
           fi
