--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -60,11 +60,11 @@ runs:
     #     echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
     #   shell: bash
 
-    - name: Set up Git
-      run: |
-        git config --global user.name "${{ github.actor }}"
-        git config --global user.email "<${{ github.actor }}@linkedin.com>"
-      shell: bash
+    # - name: Set up Git
+    #   run: |
+    #     git config --global user.name "${{ github.actor }}"
+    #     git config --global user.email "<${{ github.actor }}@linkedin.com>"
+    #   shell: bash
 
     - name: Determine if there are changes
       run: |
