--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -62,14 +62,8 @@ runs:
 
     - name: Set up Git
       run: |
-        git config --list
-      shell: bash
-
-    # - name: Set up Git
-    #   run: |
-    #     git config --global user.name "${{ github.actor }}"
-    #     git config --global user.email "<${{ github.actor }}@linkedin.com>"
-    #   shell: bash
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "<${{ github.actor }}@linkedin.com>"
 
     - name: Determine if there are changes
       run: |
