--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -95,7 +95,7 @@ jobs:
         run: |
           current_line=$(grep -n '^VERSION_NAME=' gradle.properties | cut -d ":" -f1)
           echo "$current_line"
-          sed -i "s/properties#L.*/properties#L$current_line\)/" README.md
+          sed -i "s/properties#L[0-9]*\\)/properties#L$current_line)/" README.md
           cat README.md
 
       - name: Create PR
