--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -96,7 +96,7 @@ jobs:
           current_line=$(grep -n '^VERSION_NAME=' gradle.properties | cut -d ":" -f1)
           echo "$current_line"
           closing_parenthesis=$(echo -n ')')
-          sed -i "s|properties#L[0-9]*$closing_parenthesis|properties#L$current_line)|" README.md
+          sed -i "s|properties#L[0-9]*)|properties#L$current_line)|" README.md
           cat README.md
 
 
