--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -9,8 +9,15 @@ on:
 jobs:
   testing:
     runs-on: ubuntu-latest
+    
 
     steps:
+      - name: Delay for 5 minutes
+        run: |
+          echo "Sleeping for 10 seconds..."
+          sleep 10
+          echo "Done sleeping."
+        
       - name: push code
         run: echo "code pushed"
 
